<resources>
    <string name="app_name">Lab02</string>
    <string name="bt_change_color">Change Color</string>
    <string name="bt_api_version">API Version</string>
    <string name="bt_share_serial">Share Serial</string>
    <string name="bt_speak">Speak</string>
    <string name="tv_student_info">Aria Tofighi, A01187542</string>
    <string name="bt_say_text">Speak</string>
    <string name="bt_back">Back</string>
</resources>