<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="186dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_change_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleChangeColor"
            android:text="@string/bt_change_color" />

        <Button
            android:id="@+id/bt_share_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_share_serial"
            android:onClick="handleShareSerial"
            />

        <Button
            android:id="@+id/bt_api_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_api_version"
            android:onClick="handleApiVersion"
            />

        <Button
            android:id="@+id/bt_speak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="handleSpeak"
            android:text="@string/bt_speak" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_student_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_student_info"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />


</androidx.constraintlayout.widget.ConstraintLayout>